--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,13 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Export ARM env vars for Terraform
+        run: |
+          echo "ARM_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID" >> $GITHUB_ENV
+          echo "ARM_TENANT_ID=$AZURE_TENANT_ID" >> $GITHUB_ENV
+          echo "ARM_CLIENT_ID=$AZURE_CLIENT_ID" >> $GITHUB_ENV
+          echo "ARM_CLIENT_SECRET=$AZURE_CLIENT_SECRET" >> $GITHUB_ENV
+
       - name: Terraform Init
         run: terraform init
 
