--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,10 +57,11 @@ jobs:
 
       - name: Export ARM env vars for Terraform
         run: |
-          echo "ARM_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=$AZURE_TENANT_ID" >> $GITHUB_ENV
-          echo "ARM_CLIENT_ID=$AZURE_CLIENT_ID" >> $GITHUB_ENV
-          echo "ARM_CLIENT_SECRET=$AZURE_CLIENT_SECRET" >> $GITHUB_ENV
+          CREDS_JSON='${{ secrets.AZURE_CREDENTIALS }}'
+          echo "ARM_SUBSCRIPTION_ID=$(echo $CREDS_JSON | jq -r '.subscriptionId')" >> $GITHUB_ENV
+          echo "ARM_TENANT_ID=$(echo $CREDS_JSON | jq -r '.tenantId')" >> $GITHUB_ENV
+          echo "ARM_CLIENT_ID=$(echo $CREDS_JSON | jq -r '.clientId')" >> $GITHUB_ENV
+          echo "ARM_CLIENT_SECRET=$(echo $CREDS_JSON | jq -r '.clientSecret')" >> $GITHUB_ENV
 
       - name: Terraform Init
         run: terraform init
