--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,10 @@ env:
 
 jobs:
   # ==========================================================================
-  # Deploy Infrastructure (Single Phase - Private by Default)
+  # Phase 1: Deploy Infrastructure with Public Access
   # ==========================================================================
-  terraform:
-    name: "Deploy Infrastructure"
+  terraform-phase1:
+    name: "Phase 1 - Deploy (Public)"
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
@@ -34,7 +34,6 @@ jobs:
       app_service_name: ${{ steps.outputs.outputs.app_service_name }}
       resource_group: ${{ steps.outputs.outputs.resource_group }}
       storage_account: ${{ steps.outputs.outputs.storage_account }}
-      sql_server: ${{ steps.outputs.outputs.sql_server }}
 
     defaults:
       run:
@@ -55,22 +54,14 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Export ARM env vars for Terraform
-        run: |
-          CREDS_JSON='${{ secrets.AZURE_CREDENTIALS }}'
-          echo "ARM_SUBSCRIPTION_ID=$(echo $CREDS_JSON | jq -r '.subscriptionId')" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=$(echo $CREDS_JSON | jq -r '.tenantId')" >> $GITHUB_ENV
-          echo "ARM_CLIENT_ID=$(echo $CREDS_JSON | jq -r '.clientId')" >> $GITHUB_ENV
-          echo "ARM_CLIENT_SECRET=$(echo $CREDS_JSON | jq -r '.clientSecret')" >> $GITHUB_ENV
-
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Apply
+      - name: Terraform Apply - Phase 1 (Public Access)
         run: |
           terraform apply -auto-approve \
             -var="sql_admin_password=${{ secrets.SQL_ADMIN_PASSWORD }}" \
-            -var="public_network_access_enabled=false"
+            -var="public_network_access_enabled=true"
 
       - name: Get Outputs
         id: outputs
@@ -78,7 +69,6 @@ jobs:
           echo "app_service_name=$(terraform output -raw app_service_name)" >> $GITHUB_OUTPUT
           echo "resource_group=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "storage_account=$(terraform output -raw storage_account_name)" >> $GITHUB_OUTPUT
-          echo "sql_server=$(terraform output -raw sql_server_fqdn)" >> $GITHUB_OUTPUT
 
   # ==========================================================================
   # Deploy Application
@@ -86,7 +76,7 @@ jobs:
   deploy-app:
     name: "Deploy Application"
     runs-on: ubuntu-latest
-    needs: terraform
+    needs: terraform-phase1
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
@@ -112,8 +102,51 @@ jobs:
       - name: Deploy to App Service
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ needs.terraform.outputs.app_service_name }}
+          app-name: ${{ needs.terraform-phase1.outputs.app_service_name }}
           package: app/src/UserProfileApp/publish
+
+      - name: Create Blob Container
+        run: |
+          az storage container create \
+            --name user-pictures \
+            --account-name ${{ needs.terraform-phase1.outputs.storage_account }} \
+            --auth-mode login || echo "Container already exists"
+
+  # ==========================================================================
+  # Phase 2: Lock Down Infrastructure
+  # ==========================================================================
+  terraform-phase2:
+    name: "Phase 2 - Lock Down (Private)"
+    runs-on: ubuntu-latest
+    needs: [terraform-phase1, deploy-app]
+    environment: ${{ github.event.inputs.environment || 'dev' }}
+
+    defaults:
+      run:
+        working-directory: terraform/envs/${{ github.event.inputs.environment || 'dev' }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Apply - Phase 2 (Lock Down)
+        run: |
+          terraform apply -auto-approve \
+            -var="sql_admin_password=${{ secrets.SQL_ADMIN_PASSWORD }}" \
+            -var="public_network_access_enabled=false"
 
       - name: Deployment Summary
         run: |
@@ -121,8 +154,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Resource | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| App Service | ${{ needs.terraform.outputs.app_service_name }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Resource Group | ${{ needs.terraform.outputs.resource_group }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| Public Access | **Disabled** 🔒 |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "All resources are private. Access via Azure services uses Trusted Services bypass." >> $GITHUB_STEP_SUMMARY
+          echo "| App Service | ${{ needs.terraform-phase1.outputs.app_service_name }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Resource Group | ${{ needs.terraform-phase1.outputs.resource_group }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Phase 1 | ✅ Deployed with public access |" >> $GITHUB_STEP_SUMMARY
+          echo "| Phase 2 | 🔒 Locked down (private) |" >> $GITHUB_STEP_SUMMARY
