--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,11 @@ on:
 env:
   TF_VERSION: "1.5.0"
   DOTNET_VERSION: "8.0.x"
+  # Terraform Service Principal Authentication
+  ARM_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
+  ARM_CLIENT_SECRET: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientSecret }}
+  ARM_SUBSCRIPTION_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).subscriptionId }}
+  ARM_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
 
 jobs:
   # ==========================================================================
@@ -48,11 +53,6 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
           terraform_wrapper: false
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
         run: terraform init
@@ -105,13 +105,6 @@ jobs:
           app-name: ${{ needs.terraform-phase1.outputs.app_service_name }}
           package: app/src/UserProfileApp/publish
 
-      - name: Create Blob Container
-        run: |
-          az storage container create \
-            --name user-pictures \
-            --account-name ${{ needs.terraform-phase1.outputs.storage_account }} \
-            --auth-mode login || echo "Container already exists"
-
   # ==========================================================================
   # Phase 2: Lock Down Infrastructure
   # ==========================================================================
@@ -133,11 +126,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: ${{ env.TF_VERSION }}
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Terraform Init
         run: terraform init
