--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,8 @@ jobs:
       app_service_name: ${{ steps.outputs.outputs.app_service_name }}
       resource_group: ${{ steps.outputs.outputs.resource_group }}
       storage_account: ${{ steps.outputs.outputs.storage_account }}
+      sql_server_name: ${{ steps.outputs.outputs.sql_server_name }}
+      database_name: ${{ steps.outputs.outputs.database_name }}
 
     defaults:
       run:
@@ -69,6 +71,43 @@ jobs:
           echo "app_service_name=$(terraform output -raw app_service_name)" >> $GITHUB_OUTPUT
           echo "resource_group=$(terraform output -raw resource_group_name)" >> $GITHUB_OUTPUT
           echo "storage_account=$(terraform output -raw storage_account_name)" >> $GITHUB_OUTPUT
+          echo "sql_server_name=$(terraform output -raw sql_server_name)" >> $GITHUB_OUTPUT
+          echo "database_name=$(terraform output -raw database_name)" >> $GITHUB_OUTPUT
+
+  # ==========================================================================
+  # Run Database Migration
+  # ==========================================================================
+  database-migration:
+    name: "Database Migration"
+    runs-on: ubuntu-latest
+    needs: terraform-phase1
+    environment: ${{ github.event.inputs.environment || 'dev' }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Run SQL Migration Script
+        run: |
+          # Install sqlcmd
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          curl https://packages.microsoft.com/config/ubuntu/22.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y mssql-tools18 unixodbc-dev
+
+          # Run migration script
+          /opt/mssql-tools18/bin/sqlcmd \
+            -S ${{ needs.terraform-phase1.outputs.sql_server_name }}.database.windows.net \
+            -d ${{ needs.terraform-phase1.outputs.database_name }} \
+            -U sqladmin \
+            -P "${{ secrets.SQL_ADMIN_PASSWORD }}" \
+            -i app/database/init-database.sql \
+            -C
 
   # ==========================================================================
   # Deploy Application
@@ -76,7 +115,7 @@ jobs:
   deploy-app:
     name: "Deploy Application"
     runs-on: ubuntu-latest
-    needs: terraform-phase1
+    needs: [terraform-phase1, database-migration]
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
     steps:
@@ -111,7 +150,7 @@ jobs:
   terraform-phase2:
     name: "Phase 2 - Lock Down (Private)"
     runs-on: ubuntu-latest
-    needs: [terraform-phase1, deploy-app]
+    needs: [terraform-phase1, database-migration, deploy-app]
     environment: ${{ github.event.inputs.environment || 'dev' }}
 
     defaults:
@@ -144,5 +183,7 @@ jobs:
           echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
           echo "| App Service | ${{ needs.terraform-phase1.outputs.app_service_name }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Resource Group | ${{ needs.terraform-phase1.outputs.resource_group }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Database | ${{ needs.terraform-phase1.outputs.database_name }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Phase 1 | ✅ Deployed with public access |" >> $GITHUB_STEP_SUMMARY
+          echo "| Database | ✅ Migration completed |" >> $GITHUB_STEP_SUMMARY
           echo "| Phase 2 | 🔒 Locked down (private) |" >> $GITHUB_STEP_SUMMARY
