feat: add image serving API and fix blob storage access
- Create ImagesController.cs with /api/images endpoint
- Update appsettings.json to include container name
- Add Storage Blob Data Reader role in Terraform for image display
- Fix: Images now serve through API instead of direct blob URL

--- a/app/src/UserProfileApp/appsettings.json
+++ b/app/src/UserProfileApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "AzureStorage": {
-    "AccountName": "labazuresa1mn01w"
+    "AccountName": "labazuresa1mn01w",
+    "ContainerName": "user-pictures"
   }
 }
